--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -186,45 +186,7 @@ block content
             var data = {
               rating: rating,
               uploads: checkedValues,
-              csrf: csrf
-            }
-
-            $.ajax({
-              type: 'POST',
-              url: `/admin/changeRatings`, // todo: change to user filter
-              data,
-              success: function (data) {
-                if (data == 'success') {
-                  window.location.reload(true);
-                } else {
-                  swal("Something didn't work, please contact PewTube at ceo@pew.tube or via the widget in the bottom right corner")
-                }
-                console.log(data);
-              },
-              error: function (err) {
-                console.log(err);
-              }
-            });
-
-
-            console.log(rating);
-          })
-
-    // delete multiple media at once
-    if user && user.role == 'admin'
-        script.
-          $('.change-rating').on('click', function () {
-            var checkedValues = $('input:checkbox:checked').map(function () {
-              return this.value;
-            }).get();
-
-            var rating = $(this).attr('rating');
-            var csrf = '#{_csrf}'
-
-
-            var data = {
-              uploads: checkedValues,
-              csrf: csrf
+              _csrf: csrf
             }
 
             $.ajax({
@@ -250,25 +212,7 @@ block content
 
     include ../viewPartials/changeSensitivityFilterJs
 
-    script.
-      $(document).on({
-        mouseenter: function () {
-          var width = $(this).width()
-          var height = $(this).height()
-
-
-          $(this).css("width", width * 1.10);
-          $(this).css("height", height * 1.10);
-
-        },
-        mouseleave: function () {
-          var width = $(this).width()
-          var height = $(this).height()
-
-          $(this).css("width", width / 1.10);
-          $(this).css("height", height / 1.10);
-        }
-      }, '.preview-image');
+    include ../viewPartials/mouseOverJavascript
 
     if user
         script.
@@ -433,8 +377,6 @@ block content
                 _csrf: csrf,
                 channelUrl
               }
-
-              console.log(data);
 
               $.ajax({
                 type: 'POST',
