--- a/views/viewPartials/adminSensitivityButtons.pug
+++ b/views/viewPartials/adminSensitivityButtons.pug
@@ -3,3 +3,42 @@ if user && user.role == 'admin'
         button.btn-lg.button-success.change-rating(rating="sensitive") Mark As Sensitive
         button.btn-lg.button-success.change-rating(rating="mature") Mark As NSFW (Mature)
         button.btn-lg.button-success.change-rating(rating="allAges") Mark As SFW (AllAges)
+
+    script.
+      $('.change-rating').on('click', function () {
+        var checkedValues = $('input:checkbox:checked').map(function () {
+          return this.value;
+        }).get();
+
+        var rating = $(this).attr('rating');
+        var csrf = '#{_csrf}'
+
+
+        var data = {
+          rating: rating,
+          uploads: checkedValues,
+          _csrf: csrf
+        }
+
+        console.log(data);
+
+        $.ajax({
+          type: 'POST',
+          url: `/admin/changeRatings`, // todo: change to user filter
+          data,
+          success: function (data) {
+            if (data == 'success') {
+              window.location.reload(true);
+            } else {
+              swal("Something didn't work, please contact PewTube at ceo@pew.tube or via the widget in the bottom right corner")
+            }
+            console.log(data);
+          },
+          error: function (err) {
+            console.log(err);
+          }
+        });
+
+
+        console.log(rating);
+      })
