where did this go

--- a/views/media.pug
+++ b/views/media.pug
@@ -162,6 +162,18 @@ block content
                     if upload.fileType == 'video' || upload.fileType == 'audio'
                         p(style="margin-top:15px") File Size: #{ ( upload.fileSize/ ( 1000 * 1000)).toFixed() } MB
 
+                    if upload.category
+                        each category in categories
+                            if category.name == upload.category
+                                p(style="margin-top:15px;font-size:12px;") Category: #{category.displayName}
+
+                                if upload.subcategory
+
+                                    each subcategory in category.subcategories
+
+                                        if upload.subcategory == subcategory.name
+                                            p(style="margin-top:15px;font-size:12px;") Subcategory: #{subcategory.displayName}
+
 
                     if upload.rating
                         if upload.rating == 'allAges'
