cleaning up media

--- a/views/media.pug
+++ b/views/media.pug
@@ -434,291 +434,11 @@ block content
 
     include ./mediaPlayerPartials/changeQualityJs
 
-    script.
-
-        // change video qualities
-
-        var lowQualityVideo = '#{uploadServer}/#{upload.uploader.channelUrl}/#{upload.uniqueTag}.mp4'
-        var highQualityVideo = '#{uploadServer}/#{upload.uploader.channelUrl}/#{upload.uniqueTag}-high.mp4'
-
-        var fileType = '#{upload.fileType}'
-
-        if (fileType == 'video') {
-            var media = $(fileType)[0];
-        }
-
-        $('.low-quality').on('click', function(){
-
-          var data = {
-            _csrf: csrf,
-          }
-
-          $.ajax({
-            type: 'POST',
-            url: '/api/changeUserDefaultQuality/low',
-            data,
-            success: function (data) {
-              console.log(data);
-            },
-            error: function (err) {
-              console.log(err);
-            }
-          });
-
-          var quality = $('#dropdownMenu1').attr('quality');
-          if(quality == 'low') return
-
-          $('#dropdownMenu1').text('Quality: Low')
-          $('#dropdownMenu1').attr('quality', 'low');
-          $("#dropdownMenu1").append("<span class='caret'></span>");
-
-          var currentTime = media.currentTime;
-
-          $('.video-source').attr('src', lowQualityVideo)
-          media = $(fileType)[0];
-          media.load();
-          media.play();
-
-          media.currentTime = currentTime;
-        })
-
-        $('.high-quality').on('click', function () {
-
-          var data = {
-            _csrf: csrf,
-          }
-
-          $.ajax({
-            type: 'POST',
-            url: '/api/changeUserDefaultQuality/high',
-            data,
-            success: function (data) {
-              console.log(data);
-            },
-            error: function (err) {
-              console.log(err);
-            }
-          });
-
-          var quality = $('#dropdownMenu1').attr('quality');
-          if (quality == 'high') return
-
-          $('#dropdownMenu1').text('Quality: High')
-          $('#dropdownMenu1').attr('quality', 'high');
-          $("#dropdownMenu1").append("<span class='caret'></span>");
-
-          var currentTime = media.currentTime;
-
-          $('.video-source').attr('src', highQualityVideo)
-          media = $(fileType)[0];
-          media.load();
-          media.play();
-
-          media.currentTime = currentTime;
-        })
-
-
-
+    include ./mediaPlayerPartials/changeUserDefaultQualityJs
 
     script(src="https://cdn.plyr.io/2.0.16/plyr.js")
-    if user
-        script.
 
-          var channelUrl = '#{upload.uploader.channelUrl}'
-          var channelName = '#{upload.uploader.channelName}'
-          var upload = '#{upload._id}'
-
-
-          function getParameterByName(name, url) {
-            if (!url) url = window.location.href;
-            name = name.replace(/[\[\]]/g, "\\$&");
-            var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-              results = regex.exec(url);
-            if (!results) return null;
-            if (!results[2]) return '';
-            return decodeURIComponent(results[2].replace(/\+/g, " "));
-
-          }
-
-          var amountOfCreditPurchased = getParameterByName('credit');
-
-          if(amountOfCreditPurchased){
-            swal({ text : 'Congratulations, you just successfully purchased $' + amountOfCreditPurchased/100 + ' of PewTube credit'
-              // + 'you can use these credits to support your favorite content creators'
-            });
-          }
-
-          console.log(amountOfCreditPurchased);
-
-          // inputOptions can be an object or Promise
-          var inputOptions = new Promise(function (resolve) {
-            resolve({
-              '10': '$10',
-              '25': '$25',
-              '50': '$50'
-            });
-          });
-
-          $(document).on("click", ".swal2-container input[name='swal2-radio']", function () {
-            var id = $('input[name=swal2-radio]:checked').val();
-            console.log('id: ' + id);
-          });
-
-          $(function () {
-
-            var path = window.location.pathname;
-
-            console.log(path);
-
-            var stripeToken = '#{stripeToken}'
-
-            console.log(stripeToken);
-
-            var amountForStripe;
-
-            var handler = StripeCheckout.configure({
-              key: stripeToken,
-              image: 'https://f001.backblazeb2.com/file/pewtube/pewtube/RCbutDM.jpg',
-              locale: 'auto',
-              // bitcoin: true,
-              token: function (token) {
-
-                console.log('token')
-                console.log(token)
-
-                var data = {
-                  _csrf: csrf,
-                  token,
-                  amount: amountForStripe,
-                  upload
-                }
-
-                $.ajax({
-                  type: 'POST',
-                  url: '/api/purchase/credit',
-                  data,
-                  success: function (data) {
-                    if (data == 'success') {
-                      window.location = path + '?credit=' + amountForStripe
-                    } else {
-                      swal("Something didn't work, please contact PewTube at ceo@pew.tube or via the widget in the bottom right corner")
-                    }
-                    console.log(data);
-                  },
-                  error: function (err) {
-                    console.log(err);
-                  }
-                });
-
-
-                console.log(token);
-                // TODO: Post this guy to the backend
-              }
-            });
-
-            // make sure to set the font size to font-size: 34px; for the radio buttons
-
-            var credit = #{user.credit};
-
-            if(credit == 0){
-              $('.donate').on('click', function () {
-                swal({
-                  title: 'Top-Up Account',
-                  text: 'You currently have no credit to donate, please select an account to top up your account with',
-                  input: 'radio',
-                  inputOptions: inputOptions,
-                  inputValidator: function (result) {
-                    return new Promise(function (resolve, reject) {
-                      if (result) {
-                        resolve();
-                      } else {
-                        reject('You need to select something!');
-                      }
-                    });
-                  }
-                }).then(function (result) {
-
-                  if(!result.value) return
-
-                  // turn amount from dollars to cents
-                  amountForStripe = (Number(result.value)) * 100
-
-                  handler.open({
-                    name: 'PewTube, Inc.',
-                    description: '$' + result.value + ' of PewTube Credits',
-                    amount: amountForStripe ,
-                    allowRememberMe: false
-                    // email: "customer@email.com"
-                  });
-                })
-              })
-            }
-
-            // if user has credit
-            if(credit > 0){
-              $('.donate').on('click', function () {
-
-                swal({
-                    title: "Donate To User",
-                    text: "Your credit is $" + (credit/100) + ". Please input the amount in dollars you'd like to donate to user (minimum $0.25)",
-                    input: "text",
-                    showCancelButton: true,
-                    animation: "slide-from-top",
-                    inputPlaceholder: "Amount To Donate",
-                    inputValidator: function(result){
-                      return new Promise(function(resolve){
-                        console.log(result);
-                        var isNotANumber = isNaN(result)
-                        console.log(isNotANumber)
-                        if(result < 0.25){
-                          resolve('Please enter a value equal to or greater than 0.25');
-                        } else if (isNotANumber){
-                          resolve('Please enter a number')
-                        } else if ( credit < ( result * 100 ) ) {
-                          resolve('Please enter a number smaller than your credit')
-                        } else if (result < 0) {
-                          resolve('Please enter a positive number')
-                        } else {
-                          resolve()
-                        }
-                      })
-                    }
-                  }).then(function(result){
-
-                  // turn amount from dollars to cents
-                  var creditAmount = (Number(result.value)) * 100
-
-                  var data = {
-                    _csrf: csrf,
-                    channelUrl,
-                    amount : creditAmount
-                  }
-
-                  $.ajax({
-                    type: 'POST',
-                    url: '/api/credit',
-                    data,
-                    success: function (data) {
-                      if (data == 'success') {
-                        swal({ text: 'Congratulations, you have donated $' + result.value + ' of credits to ' + channelName || channelUrl })
-                      } else {
-                        swal("Something didn't work, please contact PewTube at ceo@pew.tube or via the widget in the bottom right corner")
-                      }
-                      console.log(data);
-                    },
-                    error: function (err) {
-                      console.log(err);
-                    }
-                  });
-
-                  console.log(result.value);
-                })
-              });
-            }
-
-
-
-          });
+    include mediaPlayerPartials/creditFunctionalityJs
 
     // delete comment functionality
     script.
