--- a/views/media.pug
+++ b/views/media.pug
@@ -440,73 +440,12 @@ block content
 
     include mediaPlayerPartials/creditFunctionalityJs
 
+    include mediaPlayerPartials/deleteCommentJs
+
+    include mediaPlayerPartials/subscribeFunctionalityJs
+
     // delete comment functionality
-    script.
-      function deleteComment(commentId, commentThread){
 
-        var upload = '#{upload._id}';
-
-        var csrf = '#{_csrf}'
-
-        var data = {
-          _csrf: csrf,
-          upload,
-          commentId,
-          uniqueTag: mediaUniqueTag
-        }
-
-        $.ajax({
-          type: 'POST',
-          url: `/api/comment/delete`,
-          data,
-          success: function (data) {
-
-            swal('Comment deleted!');
-
-            commentThread.hide();
-
-
-
-            // remove comment
-            console.log(data);
-          },
-          error: function (err) {
-
-            swal('Unable to delete comment please contact administrator')
-            console.log(err);
-          }
-        });
-
-      }
-
-      $('.delete-comment-button').on('touchstart click', function (e) {
-
-            var commentThread = $(this).parent().parent().parent().parent();
-
-            var commentId = $(this).attr('commentId');
-
-            // dont move browser
-            e.preventDefault();
-
-            swal({
-              title: "Delete Comment",
-              text: "Are you sure you want to delete the comment? \n The entire comment thread will be deleted.",
-              type: "warning",
-              showCancelButton: true,
-              confirmButtonClass: "btn-danger",
-              confirmButtonText: "Delete Comment",
-              cancelButtonText: "Cancel",
-              closeOnConfirm: false,
-              closeOnCancel: false
-            },
-            function (isConfirm) {
-              if (isConfirm) {
-                 deleteComment(commentId, commentThread)
-              } else {
-                swal.close()
-              }
-            });
-      })
 
 
     //script.
@@ -669,6 +608,8 @@ block content
 
 
     script.
+        // share button to get embed link
+
         var uniqueTag = '#{upload.uniqueTag}';
 
         var fileType = '#{upload.fileType}';
@@ -687,6 +628,8 @@ block content
         })
 
     script.
+
+      // download functionality
 
       var downloadUrl = '#{uploadServer}/#{upload.uploader.channelUrl}/#{upload.uniqueTag}#{upload.fileExtension}'
 
@@ -719,6 +662,8 @@ block content
       });
 
     script.
+
+      // copy details functionality
 
       $('button').tooltip({
         trigger: 'click',
@@ -756,41 +701,7 @@ block content
       myTextEl.innerHTML = Autolinker.link(myTextEl.innerHTML);
 
 
-    script.
-        /* REPEAT FUNCTIONALITY BEGIN */
-        var fileType = '#{upload.fileType}';
-
-        /* REPEAT FUNCTIONALITY START */
-        var repeat = false;
-
-        if (fileType == 'audio' || fileType == 'video') {
-          var media = $(fileType)[0];
-
-          media.onended = function (e) {
-            if (repeat) {
-              media.pause();
-              media.currentTime = '0';
-              media.play();
-            }
-          };
-        }
-
-        // anything on repeat div clicked
-        $('.repeat-div').on('click', function (e) {
-          // toggle repeat value
-          repeat = !repeat;
-
-          if (repeat) {
-            swal({text: 'Repeat functionality turned on'})
-            $('.repeat-status').text('REPEAT: ON')
-            $('.repeat-div').css('opacity', '1');
-          } else {
-            swal({text: 'Repeat functionality turned off'})
-            $('.repeat-status').text('REPEAT: OFF')
-            $('.repeat-div').css('opacity', '0.7');
-          }
-        });
-        /* REPEAT FUNCTIONALITY END */
+    include ./mediaPlayerPartials/repeatFunctionalityJs
 
     if user
         script.
@@ -800,225 +711,10 @@ block content
           var user = undefined
 
 
-    script.
-
-      // SUBSCRIBE FUNCTIONALITY
-      var amountOfSubs = #{subscriberAmount}
-      var alreadySubbed = #{alreadySubbed}
-      var mediaUniqueTag = '#{upload.uniqueTag}'
-
-      console.log(alreadySubbed + ' already subbed');
-
-      $('.subscribe').on('touchstart click', function (e) {
-
-        // if user is not logged in
-        if (!user) {
-          return swal({
-              title: "Please register to subscribe",
-              type: "info",
-              showCancelButton: true,
-              confirmButtonClass: "btn-danger",
-              confirmButtonText: "Register now",
-              cancelButtonText: "Return to media",
-              closeOnConfirm: false,
-              closeOnCancel: false
-            },
-            function (isConfirm) {
-              if (isConfirm) {
-                window.location.href = "/signup";
-              } else {
-                swal.close()
-              }
-            });
-        }
-
-        var channelUrl = '#{upload.uploader.channelUrl}'
-        var csrf = '#{_csrf}'
-
-        // dont move browser
-        e.preventDefault();
-
-        var userName = "#{upload.uploader.channelName || upload.uploader.channelUrl}"
-
-        var unsubbing = alreadySubbed
-
-        // the user is unsubbing
-        if(unsubbing){
-          $('.subscribe').html(`Subscribe (${amountOfSubs})`)
-          // change from red to green
-
-          console.log('unsubscribing');
-          $('.subscribe').removeClass("btn-danger")
-          $('.subscribe').addClass("btn-success")
-
-
-          // remove class, add class
-
-          swal({ text: 'You have unsubscribed from ' + userName })
-
-        } else {
-          console.log('subscribing')
-
-          $('.subscribe').html(`Unsubscribe (${amountOfSubs})`)
-          $('.subscribe').removeClass("btn-success")
-          $('.subscribe').addClass("btn-danger")
-
-          // change from green to red
-          swal({ text: 'You have subscribed to ' + userName })
-        }
-
-        // switch value of alreadySubbed
-        if (alreadySubbed) {
-          amountOfSubs = amountOfSubs - 1
-          alreadySubbed = false;
-        } else {
-          amountOfSubs = amountOfSubs + 1
-          alreadySubbed = true;
-        }
-
-        //
-        var data = {
-          _csrf: csrf,
-          channelUrl,
-          uniqueTag : mediaUniqueTag
-        }
-
-        $.ajax({
-          type: 'POST',
-          url: `/api/subscribe`,
-          data,
-          success: function (data) {
-            console.log(data);
-          },
-          error: function (err) {
-            console.log(err);
-          }
-        });
-      })
-
-
-    script.
-      // REACT FUNCTIONALITY
-      var activeEmoji = '#{currentReact}'
-
-      var upload = '#{upload._id}'
-      var csrf = '#{_csrf}'
-
-      var height = 50;
-      var width = 50;
-      var duration = 400;
-
-      var changeSize = 0.33
-
-      $('.react img').on('mouseover', function() {
-
-        $(this).animate({
-              width: width + (width * changeSize)
-            },{
-              duration, queue: false
-            });
-
-            $(this).animate({
-              height: height + (height * changeSize )
-            },{
-              duration, queue: false
-            });
-        })
-
-        $('.react img').on('mouseout', function () {
-
-          $(this).animate({
-            width
-          }, {
-            duration, queue: false
-          });
-
-          $(this).animate({
-            height
-          }, {
-            duration, queue: false
-          });
-
-        })
-
-
-      $('.react img').on('touchstart click', function (e) {
-        if(!user){
-            return swal({
-                title: "Please register to react to content",
-                type: "info",
-                showCancelButton: true,
-                confirmButtonClass: "btn-danger",
-                confirmButtonText: "Register now",
-                cancelButtonText: "Return to media",
-                closeOnConfirm: false,
-                closeOnCancel: false
-              },
-              function (isConfirm) {
-                if (isConfirm) {
-                  window.location.href = "/signup";
-                } else {
-                  swal.close()
-                }
-              });
-        }
 
 
 
-        // dont move browser
-        e.preventDefault();
-
-
-        // change opacities
-        $('.react img').css({
-          opacity: '0.565'
-        })
-        $(this).css({
-          opacity: 1
-        })
-
-        // note active emoji
-        var oldEmoji = activeEmoji
-        var emoji = $(this).attr('class')
-        activeEmoji = emoji;
-
-        // decrement old emoji if needed
-        if(oldEmoji){
-          var oldEmojiValue = $('p.' + oldEmoji).text()
-          console.log(oldEmojiValue)
-
-          var decrementedValue = oldEmojiValue - 1
-          var updateEmoji = $('p.' + oldEmoji).text(decrementedValue)
-
-        }
-
-        var newEmojiValue = $('p.' + emoji).text()
-        var incrementedValue = parseInt(newEmojiValue) + 1
-        console.log(newEmojiValue)
-        var updatedEmojiValue = $('p.' + emoji).text(incrementedValue)
-
-        var data = {
-          _csrf : csrf,
-          emoji
-        }
-
-        $.ajax({
-          type: 'POST',
-          url: `/api/react/${upload}/${user}`,
-          data,
-          success: function (data) {
-            console.log(data);
-          },
-          error: function (err) {
-            console.log(err);
-          }
-        });
-
-
-        // app.post('/api/react/:upload/:user', internalApiController.react);
-
-
-      })
+    include ./mediaPlayerPartials/reactFunctionalityJs
 
 
 block extra_js
