--- a/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
@@ -40,6 +40,16 @@ script.
 
   })
 
+  function getParameterByName(name, url) {
+    if (!url) url = window.location.href;
+    name = name.replace(/[\[\]]/g, "\\$&");
+    var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+      results = regex.exec(url);
+    if (!results) return null;
+    if (!results[2]) return '';
+    return decodeURIComponent(results[2].replace(/\+/g, " "));
+  }
+
   console.log(getParameterByName)
 
   console.log('here')
