--- a/views/viewPartials/uploadDetails.pug
+++ b/views/viewPartials/uploadDetails.pug
@@ -1,13 +1,13 @@
 // byline
 div.upload-details
-    div.views(style="margin:0 auto;width:212px;")
+    div.views(style="margin:0 auto;width:300px;")
         p.upload-title-text.views-text(style="margin:0;") #{upload.legitViewAmount} views &nbsp
-            if upload.fileType == 'video'
-                i.fa.fa-video-camera(aria-hidden='true')
-            else if upload.fileType == 'audio'
-                i.fa.fa-volume-up(aria-hidden='true')
-            else if upload.fileType == 'image'
-                i.fa.fa-picture-o(aria-hidden='true')
+        if upload.fileType == 'video'
+            i.fa.fa-video-camera(aria-hidden='true')
+        else if upload.fileType == 'audio'
+            i.fa.fa-volume-up(aria-hidden='true')
+        else if upload.fileType == 'image'
+            i.fa.fa-picture-o(aria-hidden='true')
         // upload time ago
         p.upload-title-text.views-text(style="margin:0") #{upload.timeAgo} &nbsp
             a.upload-user-text.views-text(href=`/user/${upload.uploader.channelUrl}` style="margin:0") #{upload.uploader.channelName || upload.uploader.channelUrl}
@@ -17,6 +17,7 @@ div.upload-details
                 p.upload-title-text.views-text(style="margin:0;margin-left:3px;") #{upload.category}
         if upload.subcategory
             p.upload-title-text.views-text(style="margin:0;margin-left:3px;") #{upload.subcategory}
+
         if user && user.role == 'admin'
             if upload.rating
                 if upload.rating == 'allAges'
@@ -36,3 +37,7 @@ div.upload-details
                 //        img(src="/images/verified.jpg" width="19px" height="19px" style="margin-left:3px;margin-top:-2px;")
                 //    if upload.uploader.plan == 'plus'
                 //        span.pewtube-pro PLUS
+
+div.upload-thing
+    if within
+        p.upload-title-text.views-text  #{upload[popularTimeViews]} views last #{within}
