get a within string

--- a/views/viewPartials/uploadDetails.pug
+++ b/views/viewPartials/uploadDetails.pug
@@ -40,4 +40,4 @@ div.upload-details
 
 div.upload-thing
     if within
-        p.upload-title-text.views-text  #{upload[popularTimeViews]} views last #{within}
+        p.upload-title-text.views-text  #{upload[popularTimeViews]} #{withinDisplayString}
