more frontend polish up

--- a/views/viewPartials/uploadDetails.pug
+++ b/views/viewPartials/uploadDetails.pug
@@ -1,43 +1,48 @@
-// byline
-div.upload-details
-    div.views(style="margin:0 auto;width:300px;")
-        p.upload-title-text.views-text(style="margin:0;") #{upload.legitViewAmount} views &nbsp
+div.random-thing
+    p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;") #{upload.legitViewAmount} views &nbsp
         if upload.fileType == 'video'
-            i.fa.fa-video-camera(aria-hidden='true')
+            i.fa.fa-video-camera(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
         else if upload.fileType == 'audio'
-            i.fa.fa-volume-up(aria-hidden='true')
+            i.fa.fa-volume-up(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
         else if upload.fileType == 'image'
-            i.fa.fa-picture-o(aria-hidden='true')
+            i.fa.fa-picture-o(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
         // upload time ago
-        p.upload-title-text.views-text(style="margin:0") #{upload.timeAgo} &nbsp
-            a.upload-user-text.views-text(href=`/user/${upload.uploader.channelUrl}` style="margin:0") #{upload.uploader.channelName || upload.uploader.channelUrl}
 
-        if user && user.role == 'admin'
-            if upload.category
-                p.upload-title-text.views-text(style="margin:0;margin-left:3px;") #{upload.category}
-        if upload.subcategory
-            p.upload-title-text.views-text(style="margin:0;margin-left:3px;") #{upload.subcategory}
+        if !within
+            p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;") &nbsp uploaded #{upload.timeAgo} &nbsp
+                a.upload-user-text.views-text(href=`/user/${upload.uploader.channelUrl}` style="margin:0;text-align:center;display:inline;") #{upload.uploader.channelName || upload.uploader.channelUrl}
+        else
+            p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;") &nbsp
+                a.upload-user-text.views-text(href=`/user/${upload.uploader.channelUrl}` style="margin:0;text-align:center;display:inline;") #{upload.uploader.channelName || upload.uploader.channelUrl}
 
-        if user && user.role == 'admin'
-            if upload.rating
-                if upload.rating == 'allAges'
-                    p.upload-title-text.views-text SFW
-                if upload.rating == 'mature'
-                    p.upload-title-text.views-text NSFW
-                if upload.rating == 'sensitive'
-                    p.upload-title-text.views-text Sensitive (18+)
-
-
-        // denote whether upload is deleted
-        if user && (user.role == 'admin' || user.role == 'moderator') && upload.visibility == 'removed'
-            div
-                h4(style="margin-top:-5px;margin-bottom:-18px;") DELETED
-                //p(style="font-size:15px") #{upload.uploader.channelName || upload.uploader.channelUrl}
-                //    if upload.uploader.verified == true
-                //        img(src="/images/verified.jpg" width="19px" height="19px" style="margin-left:3px;margin-top:-2px;")
-                //    if upload.uploader.plan == 'plus'
-                //        span.pewtube-pro PLUS
 
 div.upload-thing
     if within
-        p.upload-title-text.views-text  #{upload[popularTimeViews]} #{withinDisplayString}
+        p.upload-title-text.views-text #{upload[popularTimeViews]} #{withinDisplayString}
+
+div.admin
+    if user && user.role == 'admin'
+        if upload.category
+            p.upload-title-text.views-text(style="margin:0;margin-left:3px;text-align:center;") #{upload.category}
+    if upload.subcategory
+        p.upload-title-text.views-text(style="margin:0;margin-left:3px;text-align:center;") #{upload.subcategory}
+
+    if user && user.role == 'admin'
+        if upload.rating
+            if upload.rating == 'allAges'
+                p.upload-title-text.views-text SFW
+            if upload.rating == 'mature'
+                p.upload-title-text.views-text NSFW
+            if upload.rating == 'sensitive'
+                p.upload-title-text.views-text Sensitive (18+)
+
+
+    // denote whether upload is deleted
+    if user && (user.role == 'admin' || user.role == 'moderator') && upload.visibility == 'removed'
+        div
+            h4(style="margin-top:-5px;margin-bottom:-18px;") DELETED
+            //p(style="font-size:15px") #{upload.uploader.channelName || upload.uploader.channelUrl}
+            //    if upload.uploader.verified == true
+            //        img(src="/images/verified.jpg" width="19px" height="19px" style="margin-left:3px;margin-top:-2px;")
+            //    if upload.uploader.plan == 'plus'
+            //        span.pewtube-pro PLUS
